--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "crash-course",
+  "name": "web-final",
   "version": "1.0.0",
-  "description": "a node crash course",
+  "description": "my web final",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,19 +9,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iamshaunjp/node-crash-course.git"
+    "url": "git+https://github.com/Kandy-Kane/final.git"
   },
-  "author": "net ninja",
+  "author": "Frank Kane",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/iamshaunjp/node-crash-course/issues"
+    "url": "https://github.com/Kandy-Kane/final"
   },
-  "homepage": "https://github.com/iamshaunjp/node-crash-course#readme",
+  "homepage": "https://github.com/Kandy-Kane/final",
   "dependencies": {
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.10",
     "morgan": "^1.10.0"
-  }
+  },
+  "engines": {
+     "node" : ">= 6.11.3" } 
 }
